@@ -47,6 +47,7 @@ import android.app.ActivityManager;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
+import android.content.pm.PackageManager;
 import android.os.Build;
 import android.os.UserManager;
 import android.service.quicksettings.TileService;
@@ -116,6 +117,7 @@ import com.android.bedstead.harrier.annotations.RequireRunOnVisibleBackgroundNon
 import com.android.bedstead.harrier.annotations.RequireSdkVersion;
 import com.android.bedstead.harrier.annotations.RequireSystemServiceAvailable;
 import com.android.bedstead.harrier.annotations.RequireTargetSdkVersion;
+import com.android.bedstead.harrier.annotations.RequireTelephonySupport;
 import com.android.bedstead.harrier.annotations.RequireUserSupported;
 import com.android.bedstead.harrier.annotations.RequireVisibleBackgroundUsers;
 import com.android.bedstead.harrier.annotations.RequireVisibleBackgroundUsersOnDefaultDisplay;
@@ -211,6 +213,7 @@ import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * A Junit rule which exposes methods for efficiently changing and querying device state.
@@ -273,6 +276,8 @@ public final class DeviceState extends HarrierRule {
 
     private final ExecutorService mTestExecutor = Executors.newSingleThreadExecutor();
     private Thread mTestThread;
+
+    private PackageManager mPackageManager = sContext.getPackageManager();
 
     public static final class Builder {
 
@@ -1286,6 +1291,15 @@ public final class DeviceState extends HarrierRule {
                 continue;
             }
 
+            if (annotation instanceof RequireTelephonySupport) {
+                RequireTelephonySupport requireTelephonySupport =
+                        (RequireTelephonySupport) annotation;
+                checkFailOrSkip("Device does not have telephony support",
+                        mPackageManager.hasSystemFeature(PackageManager.FEATURE_TELEPHONY),
+                        requireTelephonySupport.failureMode());
+                continue;
+            }
+
             if (annotation instanceof MostImportantCoexistenceTest) {
                 mTestApps.put(MostImportantCoexistenceTest.MORE_IMPORTANT, deviceOwner());
 
@@ -1390,6 +1404,7 @@ public final class DeviceState extends HarrierRule {
         }
 
         annotations.addAll(description.getAnnotations());
+        annotations.sort(BedsteadJUnit4::annotationSorter);
 
         checkAnnotations(annotations);
 
@@ -2105,6 +2120,7 @@ public final class DeviceState extends HarrierRule {
 
                 // DO + work profile isn't a valid state
                 ensureHasNoDeviceOwner();
+                ensureDoesNotHaveUserRestriction(DISALLOW_ADD_MANAGED_PROFILE, forUserReference);
             }
 
             profile = createProfile(resolvedUserType, forUserReference);
@@ -2304,7 +2320,7 @@ public final class DeviceState extends HarrierRule {
     private void ensureCanAddProfile(
             com.android.bedstead.nene.users.UserType userType, FailureMode failureMode) {
         checkFailOrSkip("the device cannot add more profiles of type " + userType,
-                TestApis.users().getRemainingCreatableProfileCount(userType) > 0,
+                TestApis.users().canCreateProfile(userType),
                 failureMode);
     }
 
@@ -3076,7 +3092,7 @@ public final class DeviceState extends HarrierRule {
 
             for (UserReference u : TestApis.users().all().stream()
                     .sorted(Comparator.comparing(u -> u.equals(instrumented)).reversed())
-                    .toList()) {
+                    .collect(Collectors.toList())) {
                 if (u.isSystem()) {
                     continue;
                 }
